--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </div>
 
   <!-- Template do Formulário -->
-  <template id="form-template">
+  <template id="formulario">
     <div class="mb-3">
       <label for="nome" class="form-label">Nome</label>
       <input type="text" class="form-control" name="nome" required>
