--- a/index.html
+++ b/index.html
@@ -43,18 +43,22 @@
   </div>
 
   <!-- Template do Formulário -->
-  <template id="formulario">
+  <template id="form-template">
     <div class="mb-3">
-      <label for="nome" class="form-label">Nome</label>
-      <input type="text" class="form-control" name="nome" required>
+      <label for="personagem" class="form-label">Personagem</label>
+      <input type="text" class="form-control" name="personagem" required>
     </div>
     <div class="mb-3">
-      <label for="endereco" class="form-label">Endereço</label>
-      <input type="text" class="form-control" name="endereco" required>
+      <label for="nivel" class="form-label">Nível</label>
+      <input type="text" class="form-control" name="nivel" required>
     </div>
     <div class="mb-3">
-      <label for="telefone" class="form-label">Telefone</label>
-      <input type="tel" class="form-control" name="telefone" required>
+      <label for="elemento" class="form-label">Elemento</label>
+      <input type="tel" class="form-control" name="elemento" required>
+    </div>
+    <div class="mb-3">
+      <label for="raridade" class="form-label">Raridade</label>
+      <input type="tel" class="form-control" name="raridade" required>
     </div>
   </template>
 
