--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <!-- Template do Formulário -->
   <template id="form-template">
-    <div class="row sm-9 mb-3">
+    <div class="col-md-9 mb-3">
       <label for="personagem" class="form-label">Personagem</label>
       <input type="text" class="form-control" name="personagem" required>
     </div>
