--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
   <!-- Template do Formulário -->
   <template id="form-template">
+    <div class='row'>
     <div class="col-md-9 mb-3">
       <label for="personagem" class="form-label">Personagem</label>
       <input type="text" class="form-control" name="personagem" required>
@@ -59,6 +60,7 @@
     <div class="mb-3">
       <label for="raridade" class="form-label">Raridade</label>
       <input type="tel" class="form-control" name="raridade" required>
+    </div>
     </div>
   </template>
 
