--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
       <label for="personagem" class="form-label">Personagem</label>
       <input type="text" class="form-control" name="personagem" required>
     </div>
-    <div class="mb-3">
+    <div class="col-md-3 mb-3">
       <label for="nivel" class="form-label">Nível</label>
       <input type="text" class="form-control" name="nivel" required>
     </div>
-    <div class="mb-3">
+    <div class="col-md-6 mb-3">
       <label for="elemento" class="form-label">Elemento</label>
       <input type="tel" class="form-control" name="elemento" required>
     </div>
-    <div class="mb-3">
+    <div class="mcol-md-6 b-3">
       <label for="raridade" class="form-label">Raridade</label>
       <input type="tel" class="form-control" name="raridade" required>
     </div>
